--- a/frontend/src/CSS/index.css
+++ b/frontend/src/CSS/index.css
@@ -32,6 +32,23 @@ div {
 
 h1, h2, h3 {
   margin: 0;
+  display:flex;
+  align-items: center;
+}
+
+.logo {
+  font-size: 1.5em;
+  text-align: center;
+  color: #2FD887;
+}
+
+.logo-name {
+  color: #005059;
+  margin: 0;
+}
+
+.logo-S {
+  justify-content: center;
 }
 
 .blue {
