--- a/frontend/src/CSS/new.css
+++ b/frontend/src/CSS/new.css
@@ -9,7 +9,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
 }
 
 .action-cap {
@@ -43,10 +43,6 @@
 #new-title-input, #add-friends-button, #new-done, .length {
   padding: 15px;
   color: #24242C;
-}
-
-.selected-friend {
-  color: #005059;
 }
 
 #done-section {
@@ -121,5 +117,15 @@
 }
 
 #modal-panel > div > h3 {
-  margin-bottom: 30px;
+  height: 15%;
+  margin-bottom: 10px;
+}
+
+#modal-panel-top {
+  height: 75%;
+}
+
+#selected-friends-container {
+  height: 80%;
+  overflow: scroll;
 }
