--- a/frontend/src/CSS/profile.css
+++ b/frontend/src/CSS/profile.css
@@ -1,9 +1,3 @@
-.logo {
-  font-size: 1.5em;
-  text-align: center;
-  color: #2FD887;
-}
-
 #profile {
   display: flex;
   background: #24242C;
